[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt-oss-client"
version = "0.1.0"
description = "A client for interacting with GPT models via MCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "halo>=0.0.31",
    "openai>=1.99.3",
    "openai-harmony>=0.0.3",
    "tiktoken>=0.11.0",
]

[project.scripts]
gpt-oss-client = "gpt_oss_client.main:run"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_oss_client"]
