[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt-oss-client"
version = "0.5.0"
description = "A client for interacting with GPT models via MCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime==4.11",
    "halo>=0.0.31",
    "openai>=1.99.3",
    "openai-harmony>=0.0.3",
    "prompt-toolkit>=3.0.51",
    "pystache>=0.6.8",
    "rich>=14.1.0",
    "sympy>=1.14.0",
    "tiktoken>=0.11.0",
]

[project.scripts]
gpt-oss-client = "gpt_oss_client.main:run"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_oss_client"]
